# Assignment

./: .env  pyproject.toml  requirements.txt
app/: config.py  crud.py  main.py  models.py  schemas.py
